scrollbar issue

--- a/html/assets/stylesheet.css
+++ b/html/assets/stylesheet.css
@@ -945,7 +945,7 @@ video {
     background-color: #212121;
     z-index: 999;
     transition: width 0.5s ease;
-    /*border-right: 3px solid #ff6600;*/
+    overflow-y: hidden;
 }
 
 .navbar-container.fixed {
@@ -965,11 +965,13 @@ video {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .navbar {
     padding: 0;
     margin: 0;
+    overflow-y: hidden;
 }
 
 .navbar-item {
